Add ruledev api to config

--- a/main.yml
+++ b/main.yml
@@ -230,6 +230,9 @@ rhel:
 
 ruledev:
   title: Rule Development
+  api:
+    versions:
+      - v1
   channel: '#flip-mode-squad'
   deployment_repo: https://github.com/RedHatInsights/ruledev-frontend-build
   frontend:
