--- a/main.yml
+++ b/main.yml
@@ -10,11 +10,12 @@ approval:
     reload: catalog/approval
 
 api:
-  title: Api docs
+  title: API documentation
   deployment_repo: https://github.com/RedHatInsights/api-frontend-build
   frontend:
     paths:
       - /docs/api
+      - /docs
 
 catalog:
   title: Catalog
@@ -96,7 +97,7 @@ dashboard:
       - /rhel/dashboard
 
 docs:
-  title: Cloud Services documentation
+  title: Documentation
   channel: '#flip-mode-squad'
   frontend:
     sub_apps:
