Add git_repo for a lot of apps

--- a/main.yml
+++ b/main.yml
@@ -39,6 +39,7 @@ catalog:
 chrome:
   channel: '#flip-mode-squad'
   deployment_repo: https://github.com/RedHatInsights/insights-chrome-build
+  git_repo: https://github.com/RedHatInsights/insights-chrome
 
 compliance:
   title: Compliance
@@ -49,6 +50,7 @@ compliance:
   frontend:
     paths:
       - /rhel/compliance
+  git_repo: https://github.com/RedHatInsights/compliance-frontend
 
 cost-management:
   title: Cost Management
@@ -94,6 +96,7 @@ dashboard:
     paths:
       - /rhel
       - /rhel/dashboard
+  git_repo: https://github.com/RedHatInsights/insights-dashboard
 
 docs:
   title: Cloud Services documentation
@@ -103,6 +106,7 @@ docs:
       - id: api
         default: true
   top_level: true
+  git_repo: https://github.com/RedHatInsights/drift-frontend
 
 drift:
   title: Configuration Drift
@@ -114,6 +118,7 @@ drift:
     title: System Comparison
     paths:
       - /rhel/drift
+  git_repo: https://github.com/RedHatInsights/drift-frontend
 
 hooks:
   title: Web Hooks Service
@@ -125,6 +130,7 @@ hooks:
     title: Hooks
     paths:
       - /settings/hooks
+  git_repo: https://github.com/RedHatInsights/notifications-frontend
 
 hybrid:
   title: Hybrid Cloud Management Services
@@ -157,6 +163,7 @@ insights:
       - id: inventory
       - id: remediations
       - id: settings-insights
+  git_repo: https://github.com/RedHatInsights/insights-advisor-frontend
   top_level: true
 
 inventory:
@@ -171,10 +178,12 @@ inventory:
     paths:
       - /rhel/inventory
       - /insights/inventory
+  git_repo: https://github.com/RedHatInsights/insights-inventory-frontend
 
 landing:
   channel: '#flip-mode-squad'
   deployment_repo: https://github.com/RedHatInsights/landing-page-frontend-build
+  git_repo: https://github.com/RedHatInsights/landing-page-frontend
 
 migration-analytics:
   title: Migration Analytics
@@ -217,6 +226,7 @@ rbac:
     paths:
       - /hybrid/settings/rbac
     reload: settings/rbac
+  git_repo: https://github.com/RedHatInsights/insights-rbac-ui
 
 remediations:
   title: Remediations
@@ -229,6 +239,7 @@ remediations:
     paths:
       - /rhel/remediations
       - /insights/remediations
+  git_repo: https://github.com/RedHatInsights/insights-remediations-frontend
 
 rhel:
   title: Cloud Management Services
@@ -260,6 +271,7 @@ ruledev:
   frontend:
     paths:
       - /staging/ruledev
+  git_repo: https://github.com/RedHatInsights/ruledev-frontend
 
 settings-hybrid:
   title: Settings
@@ -303,6 +315,7 @@ storybook:
   frontend:
     paths:
       - /docs/storybook
+  git_repo: https://github.com/RedHatInsights/insights-frontend-storybook
 
 staging:
   title: Staging Bundle
@@ -318,6 +331,7 @@ tower-analytics:
     versions:
       - v1
   deployment_repo: https://github.com/RedHatInsights/tower-analytics-frontend-build.git
+  git_repo: https://github.com/RedHatInsights/tower-analytics-frontend
 
 vulnerability:
   title: Vulnerability Management
@@ -329,3 +343,4 @@ vulnerability:
     title: Vulnerability
     paths:
       - /rhel/vulnerability
+  git_repo: https://github.com/RedHatInsights/vulnerability-ui
