Adds topics nav
in support of https://projects.engineering.redhat.com/browse/RHCLOUD-544
needs https://github.com/RedHatInsights/insights-advisor-frontend/pull/380 to be merged first

--- a/main.yml
+++ b/main.yml
@@ -157,6 +157,9 @@ insights:
         title: Overview
         default: true
         group: insights
+      - id: topics
+        title: Topics
+        group: insights
       - id: rules
         title: Rules
         group: insights
