Add cost model details page to main.yml under cost management
Signed-off-by: Boaz Shuster <boaz.shuster.github@gmail.com>

--- a/main.yml
+++ b/main.yml
@@ -84,6 +84,8 @@ cost-management:
         title: OpenShift details
       - id: aws
         title: Cloud details
+      - id: cost-models
+        title: Cost model details
   git_repo: https://github.com/project-koku/
   mailing_list: cost-mgmt@redhat.com
 
