Insights will set its own active app (so we only highlight it once)
Cant merge this till https://github.com/RedHatInsights/insights-advisor-frontend/pull/385 makes it in

--- a/main.yml
+++ b/main.yml
@@ -153,9 +153,8 @@ insights:
     paths:
       - /insights
     sub_apps:
-      - id: actions
+      - id: overview
         title: Overview
-        default: true
         group: insights
       - id: rules
         title: Rules
