--- a/main.yml
+++ b/main.yml
@@ -154,9 +154,8 @@ insights:
     paths:
       - /insights
     sub_apps:
-      - id: actions
+      - id: overview
         title: Overview
-        default: true
         group: insights
       - id: rules
         title: Rules
