--- a/main.yml
+++ b/main.yml
@@ -3,6 +3,7 @@ approval:
   api:
     versions:
       - v1
+    isBeta: true
   deployment_repo: https://github.com/RedHatInsights/approvals-frontend-deploy.git
   frontend:
     paths:
@@ -22,6 +23,7 @@ catalog:
   api:
     versions:
       - v1
+    isBeta: true
   channel: '#insights-svc-portal'
   deployment_repo: https://github.com/RedHatInsights/catalog-static-deploy
   frontend:
@@ -182,6 +184,9 @@ migration-analytics:
   api:
     versions:
       - v1
+    tags:
+      - value: "experimental"
+        title: "Experimental API"
   deployment_repo: https://github.com/RedHatInsights/xavier-ui-deploy
   disabled_on_prod: true
   disabled_on_stable: true
@@ -212,6 +217,7 @@ rbac:
   api:
     versions:
       - v1
+    isBeta: true
   deployment_repo: https://github.com/RedHatInsights/rbac-frontend-deploy.git
   frontend:
     title: User Access Management
@@ -256,6 +262,9 @@ ruledev:
   api:
     versions:
       - v1
+    tags:
+      - value: "experimental"
+        title: "Experimental API"
   channel: '#flip-mode-squad'
   deployment_repo: https://github.com/RedHatInsights/ruledev-frontend-build
   frontend:
@@ -288,6 +297,7 @@ sources:
   api:
     versions:
       - v1
+    isBeta: true
   channel: '#insights_topology_svc'
   deployment_repo: https://github.com/RedHatInsights/sources-ui-deploy
   frontend:
@@ -319,6 +329,9 @@ subscription-reporting:
   api:
     versions:
       - v1
+    tags:
+      - value: "experimental"
+        title: "Experimental API"
   channel: '#subscriptions'
   deployment_repo: https://github.com/RedHatInsights/curiosity-frontend-build
   disabled_on_prod: true
