Add subscription-reporting, but with the disabled_on_prod flag

--- a/main.yml
+++ b/main.yml
@@ -316,6 +316,19 @@ staging:
       - id: subscription-reporting
   top_level: true
 
+subscription-reporting:
+  title: Subscription Reporting
+  api:
+    versions:
+      - v1
+  channel: '#subscriptions'
+  deployment_repo: https://github.com/RedHatInsights/curiosity-frontend-build
+  disabled_on_prod: true
+  frontend:
+    paths:
+      - /staging/subscription-reporting
+  git_repo: https://github.com/RedHatInsights/curiosity-frontend
+
 tower-analytics:
   title: Ansible Tower Analytics
   api:
