--- a/main.yml
+++ b/main.yml
@@ -325,7 +325,7 @@ subscriptions:
   deployment_repo: https://github.com/RedHatInsights/curiosity-frontend-build
   frontend:
     paths:
-      - /subscriptions
+      - /staging/subscriptions
   git_repo: https://github.com/RedHatInsights/curiosity-frontend
 
 tower-analytics:
