--- a/main.yml
+++ b/main.yml
@@ -157,6 +157,9 @@ insights:
       - id: overview
         title: Overview
         group: insights
+      - id: topics
+        title: Topics
+        group: insights
       - id: rules
         title: Rules
         group: insights
