--- a/main.yml
+++ b/main.yml
@@ -11,6 +11,7 @@ approval:
   api:
     versions:
       - v1
+    isBeta: true
   deployment_repo: https://github.com/RedHatInsights/approvals-frontend-deploy.git
   frontend:
     paths:
@@ -22,6 +23,7 @@ catalog:
   api:
     versions:
       - v1
+    isBeta: true
   channel: '#insights-svc-portal'
   deployment_repo: https://github.com/RedHatInsights/catalog-static-deploy
   frontend:
@@ -60,6 +62,7 @@ cost-management:
   api:
     versions:
       - v1
+    isBeta: true
   channel: '#koku'
   deployment_repo: https://github.com/RedHatInsights/cost-management-build
   description: >
@@ -133,6 +136,7 @@ hooks:
   api:
     versions:
       - v1
+    isBeta: true
   deployment_repo: https://github.com/RedHatInsights/notifications-frontend-build.git
   frontend:
     title: Hooks
@@ -194,9 +198,6 @@ landing:
 
 migrations:
   title: Migrations
-  api: 
-    versions:
-      - v1
   frontend: 
     title: Migrations
     sub_apps:
@@ -209,6 +210,12 @@ migration-analytics:
   api:
     versions:
       - v1
+    isBeta: true
+    alias:
+      - xavier
+    tags:
+      - value: "experimental"
+        title: "Experimental API"
   deployment_repo: https://github.com/RedHatInsights/xavier-ui-deploy
   frontend:
     paths:
@@ -238,6 +245,7 @@ rbac:
   api:
     versions:
       - v1
+    isBeta: true
   deployment_repo: https://github.com/RedHatInsights/rbac-frontend-deploy.git
   frontend:
     title: User Access Management
@@ -282,6 +290,10 @@ ruledev:
   api:
     versions:
       - v1
+    isBeta: true
+    tags:
+      - value: "experimental"
+        title: "Experimental API"
   channel: '#flip-mode-squad'
   deployment_repo: https://github.com/RedHatInsights/ruledev-frontend-build
   frontend:
@@ -313,6 +325,7 @@ sources:
   api:
     versions:
       - v1
+    isBeta: true
   channel: '#insights_topology_svc'
   deployment_repo: https://github.com/RedHatInsights/sources-ui-deploy
   frontend:
@@ -343,6 +356,10 @@ subscriptions:
   api:
     versions:
       - v1
+    tags:
+      - value: "experimental"
+        title: "Experimental API"
+    isBeta: true
   channel: '#subscriptions'
   deployment_repo: https://github.com/RedHatInsights/curiosity-frontend-build
   frontend:
@@ -355,6 +372,7 @@ topological-inventory:
   api:
     versions:
       - v1.0
+    isBeta: true
   channel: '#insights_topology_svc'
   deployment_repo: https://github.com/RedHatInsights/topological-inventory-frontend-build
   frontend:
@@ -366,6 +384,7 @@ tower-analytics:
   api:
     versions:
       - v1
+    isBeta: true
   deployment_repo: https://github.com/RedHatInsights/tower-analytics-frontend-build.git
 
 vulnerability:
