--- a/main.yml
+++ b/main.yml
@@ -1,3 +1,12 @@
+ansible:
+  title: Ansible
+  frontend:
+    title: Ansible
+    sub_apps:
+      - id: automation-hub
+        default: true
+  top_level: true
+
 api-docs:
   title: API documentation
   deployment_repo: https://github.com/RedHatInsights/api-frontend-build
@@ -17,6 +26,14 @@ approval:
     paths:
       - /hybrid/catalog/approval
     reload: catalog/approval
+
+automation-hub:
+  title: Automation Hub
+  frontend:
+    paths:
+      - /ansible
+      - /ansible/automation-hub
+  git_repo: https://github.com/ansible/ansible-hub-ui
 
 catalog:
   title: Catalog
