--- a/main.yml
+++ b/main.yml
@@ -278,6 +278,8 @@ openshift:
       - id: ''
         title: Clusters
         default: true
+      - id: subscriptions
+        title: Subscriptions
   top_level: true
 
 rbac:
