Rename tower-analytics to automation-analytics at the app level, make it the default under ansible.

--- a/main.yml
+++ b/main.yml
@@ -2,9 +2,10 @@ ansible:
   title: Ansible
   frontend:
     sub_apps:
+      - id: automation-analytics
+        default: true
       - id: automation-hub
         default: true
-      - id: tower-analytics
   top_level: true
 
 api-docs:
@@ -27,12 +28,23 @@ approval:
       - /hybrid/catalog/approval
     reload: catalog/approval
 
+automation-analytics:
+  title: Automation Analytics
+  api:
+    versions:
+      - v1
+    isBeta: true
+  deployment_repo: https://github.com/RedHatInsights/tower-analytics-frontend-build.git
+  frontend:
+    paths:
+      - /ansible
+      - /ansible/automation-analytics
+
 automation-hub:
   title: Automation Hub
   deployment_repo: https://github.com/RedHatInsights/ansible-hub-ui-build
   frontend:
     paths:
-      - /ansible
       - /ansible/automation-hub
   git_repo: https://github.com/ansible/ansible-hub-ui
 
@@ -395,16 +407,6 @@ topological-inventory:
     paths:
       - /hybrid/topological-inventory
 
-tower-analytics:
-  title: Automation Analytics
-  api:
-    versions:
-      - v1
-    isBeta: true
-  deployment_repo: https://github.com/RedHatInsights/tower-analytics-frontend-build.git
-  frontend:
-    paths:
-      - /ansible/automation-analytics
 
 vulnerability:
   title: Vulnerability Management
