Revert "Remove "reload" field"
This reverts commit d86ddc2078587b00c981001c2d95d904a902790d.

--- a/main.yml
+++ b/main.yml
@@ -335,6 +335,7 @@ settings-ansible:
   frontend:
     sub_apps:
       - id: sources
+        reload: settings/sources
       - id: rbac
     suppress_id: true
 
