--- a/main.yml
+++ b/main.yml
@@ -42,11 +42,21 @@ automation-analytics:
       - /ansible/automation-analytics
 
 automation-hub:
-  title: Hub
+  title: Automation Hub
   deployment_repo: https://github.com/RedHatInsights/ansible-hub-ui-build
   frontend:
     paths:
       - /ansible/automation-hub
+    sub_apps:
+      - id: ''
+        title: Collections
+        default: true
+      - id: partners
+        title: partners
+      - id: my-namespaces
+        title: My Namespaces
+      - id: my-imports
+        title: My Imports
   git_repo: https://github.com/ansible/ansible-hub-ui
 
 catalog:
