Revert "Remove topics (#55)"
This reverts commit b4259b115150de53ff94493895027bd9358db39a.

--- a/main.yml
+++ b/main.yml
@@ -213,6 +213,9 @@ insights:
       - id: rules
         title: Rules
         group: insights
+      - id: topics
+        title: Topics
+        group: insights
       - id: inventory
       - id: remediations
   top_level: true
