--- a/main.yml
+++ b/main.yml
@@ -28,6 +28,7 @@ approval:
     paths:
       - /hybrid/catalog/approval
       - /ansible/catalog/approval
+    reload: catalog/approval
 
 automation-analytics:
   title: Automation Analytics
