Add Subscriptions to OpenShift

--- a/main.yml
+++ b/main.yml
@@ -155,6 +155,8 @@ openshift:
       - id: ''
         title: Clusters
         default: true
+      - id: subscriptions
+        title: Subscriptions
   top_level: true
 
 rbac:
