Update main.yaml (#80)
* Update main.yaml

Update `main.yaml` to add sidebar sub nav categories for AA.

* fix whitespace

* actually fix whitespace this time.

--- a/main.yml
+++ b/main.yml
@@ -40,6 +40,12 @@ automation-analytics:
     paths:
       - /ansible
       - /ansible/automation-analytics
+    sub_apps:
+      - id: ''
+        title: Clusters
+        default: true
+      - id: organization-statistics
+        title: Organization Statistics
 
 automation-hub:
   title: Automation Hub
